--- a/styles/main.css
+++ b/styles/main.css
@@ -60,7 +60,9 @@ classes
 */
 
 /*----------------------------------------------*/
-
+/* .toggle {
+    display: none;
+} */
 .button {
     text-decoration: none;
     color: #fff;
@@ -191,7 +193,7 @@ header .burger div {
 
 .meetYourMatch__background {
     width: 100%;
-    height: 30%;
+    height: 25em;
     z-index: -1;
     background-color: #EEF0FC;
     position: absolute;
@@ -217,7 +219,7 @@ header .burger div {
 
 .meetYourMatchــform input[type=text] {
     text-decoration: none;
-    color: #fff;
+    color: #3040C4;
     text-transform: capitalize;
     padding: 17px 10px 17px 40px;
     position: relative;
@@ -235,7 +237,7 @@ header .burger div {
 ::placeholder {
     color: #3040C4;
     font-weight: 300;
-    padding-left: 15px;
+    padding-left: 5px;
 }
 
 .meetYourMatchــform .button {
@@ -556,7 +558,7 @@ footer ul {
     .meetYourMatch__background {
         width: 90%;
         right: 5%;
-        height: 40%;
+        height: 25em;
         border-radius: 40px;
     }
     .meetYourMatchــform input[type=text] {
@@ -644,7 +646,7 @@ footer ul {
     .meetYourMatch__background {
         width: 90%;
         right: 5%;
-        height: 60%;
+        height: 25em;
         border-radius: 40px;
     }
     .meetYourMatchــform input[type=text] {
